bk_ida/gccida/g3/mark_set_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:2962:54: error: must use 'enum' tag to refer to type 'rtx_code'
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:2994:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3062:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)reg->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3075:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)v33, 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3075:18: error: expected expression
( machine_mode)( unsigned __int8)v33, 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3077:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)v32); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3077:18: error: expected expression
( machine_mode)( unsigned __int8)v32); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3081:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v43 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + ( int)v39) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3113:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)rtwint->fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3118:16: error: expected ';' after expression
rtwint = ( rtx)v15.rtwint; 
               ^
               ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3125:16: error: expected ';' after expression
rtwint = ( rtx)v15.rtwint; 
               ^
               ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3132:16: error: expected ';' after expression
rtwint = ( rtx)v15.rtwint; 
               ^
               ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3200:39: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v11) - 5) <= 1; 
                                      ^~~~~~~~~~~~
                                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3389:51: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)( v54 + 12) = _mm_add_epi32( v55, v52).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3402:95: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)( v81 + 12) = _mm_add_epi32( _mm_loadl_epi64( ( const __m128i *)( v81 + 12)), v79).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3417:95: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)( v83 + 12) = _mm_add_epi32( _mm_loadl_epi64( ( const __m128i *)( v83 + 12)), v79).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3438:51: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)( v73 + 12) = _mm_add_epi32( v74, v71).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3449:95: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)( v88 + 12) = _mm_add_epi32( _mm_loadl_epi64( ( const __m128i *)( v88 + 12)), v86).m128i_u64[0]; 
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/flow.c:3486:49: error: expected expression
&& ( ( int)rtint > 52 || asm_noperands( *( rtx *)&v48[2]) < 0) ) 
                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mark_set_1/src/obj/flow.o] Error 1
